Project

General

Profile

Actions

Bug #55666

closed

DumpMetricsHook caused crash

Added by Xuehan Xu almost 2 years ago. Updated almost 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

INFO  2022-05-16 13:09:30,338 [shard 0] osd - hb_back_msgr: v2:10.48.24.24:6802/773711
INFO  2022-05-16 13:09:30,338 [shard 0] osd - hb_front_msgr: v2:10.48.24.24:6803/773711
INFO  2022-05-16 13:09:30,338 [shard 0] osd - cluster_msgr: v2:10.48.24.24:6801/773711
INFO  2022-05-16 13:09:31,294 [shard 0] osd - handle_osd_map osd_map(3..4 src has 1..4) v4
INFO  2022-05-16 13:09:31,294 [shard 0] osd - handle_osd_map epochs [3..4], i have 3, src has [1..4]
INFO  2022-05-16 13:09:31,294 [shard 0] osd - osd.0: committed_osd_maps(4, 4)
INFO  2022-05-16 13:09:31,294 [shard 0] osd - osd.0: map e 4 marked me up: up_from 4, bind_epoch 0, state booting
INFO  2022-05-16 13:09:31,294 [shard 0] osd - osd.0: activating...
INFO  2022-05-16 13:09:31,294 [shard 0] osd - handle_osd_map osd_map(4..4 src has 1..4) v4
INFO  2022-05-16 13:09:31,294 [shard 0] osd - handle_osd_map epochs [4..4], i have 4, src has [1..4]
INFO  2022-05-16 13:09:31,328 [shard 0] osd - osd.0: now active
WARN  2022-05-16 13:09:31,763 [shard 0] mgrc - No active mgr available yet
INFO  2022-05-16 13:09:33,764 [shard 0] ms - [osd.0(client) v2:10.48.24.24:6800/773711 >> mgr.? v2:10.48.24.24:6804/773620] ProtocolV2::start_connect(): peer_addr=v2:10.48.24.24:6804/773620, peer_name=mgr.?, cc=152249355335249759 policy(lossy=true, server=false, standby=false, resetcheck=false)
INFO  2022-05-16 13:09:33,764 [shard 0] monc - get_auth_request(con=[osd.0(client) v2:10.48.24.24:6800/773711@63203 >> mgr.? v2:10.48.24.24:6804/773620], auth_method=0)
INFO  2022-05-16 13:09:33,845 [shard 0] ms - [osd.0(client) v2:10.48.24.24:6800/773711@63203 >> mgr.4106 v2:10.48.24.24:6804/773620] connected: gs=2, pgs=4, cs=0, client_cookie=152249355335249759, server_cookie=0, in_seq=0, out_seq=0, out_q=0
INFO  2022-05-16 13:09:33,846 [shard 0] mgrc - handle_mgr_conf mgrconfigure(period=5, threshold=5) v4
INFO  2022-05-16 13:09:36,914 [shard 0] osd - asok response length: 4577
Aborting on shard 0.
Backtrace:
 0# gsignal in /lib64/libc.so.6
 1# abort in /lib64/libc.so.6
 2# crimson::admin::DumpMetricsHook::dump_metric_value(ceph::Formatter*, std::basic_string_view<char, std::char_traits<char> >, seastar::metrics::impl::registered_metric const&, std::map<seastar::basic_sstring<char, unsigned int, 15u, true>, seastar::basic_sstring<char, unsigned int, 15u, true>, std::less<seastar::basic_sstring<char, unsigned int, 15u, true> >, std::allocator<std::pair<seastar::basic_sstring<char, unsigned int, 15u, true> const, seastar::basic_sstring<char, unsigned int, 15u, true> > > > const&) in /home/xuxuehan/src/ceph/build/bin/crimson-osd
 3# crimson::admin::DumpMetricsHook::call(std::map<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, boost::variant<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, bool, long, double, std::vector<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::allocator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > > >, std::vector<long, std::allocator<long> >, std::vector<double, std::allocator<double> > >, std::less<void>, std::allocator<std::pair<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const, boost::variant<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, bool, long, double, std::vector<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::allocator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > > >, std::vector<long, std::allocator<long> >, std::vector<double, std::allocator<double> > > > > > const&, std::basic_string_view<char, std::char_traits<char> >, ceph::buffer::v15_2_0::list&&) const in /home/xuxuehan/src/ceph/build/bin/crimson-osd
 4# crimson::admin::AdminSocket::execute_command(std::vector<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::allocator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > > > const&, ceph::buffer::v15_2_0::list&&) in /home/xuxuehan/src/ceph/build/bin/crimson-osd
 5# crimson::admin::AdminSocket::execute_line(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, seastar::output_stream<char>&) in /home/xuxuehan/src/ceph/build/bin/crimson-osd
 6# seastar::continuation<seastar::internal::promise_base_with_type<void>, crimson::admin::AdminSocket::handle_client(seastar::input_stream<char>&, seastar::output_stream<char>&)::{lambda()#1}, seastar::future<void>::then_impl_nrvo<{lambda()#1}, seastar::future>({lambda()#1}&&)::{lambda(seastar::internal::promise_base_with_type<void>&&, {lambda()#1}&, seastar::future_state<seastar::internal::monostate>&&)#1}, void>::run_and_dispose() at admin_socket.cc:?
 7# seastar::reactor::run_tasks(seastar::reactor::task_queue&) at :?
 8# seastar::reactor::run_some_tasks() [clone .part.0] at reactor.cc:?
 9# seastar::reactor::do_run() at :?
10# seastar::reactor::run() at :?
11# seastar::app_template::run_deprecated(int, char**, std::function<void ()>&&) at :?
12# seastar::app_template::run(int, char**, std::function<seastar::future<int> ()>&&) at :?
13# main in /home/xuxuehan/src/ceph/build/bin/crimson-osd
14# __libc_start_main in /lib64/libc.so.6
15# _start in /home/xuxuehan/src/ceph/build/bin/crimson-osd

Actions #1

Updated by Xuehan Xu almost 2 years ago

  • Description updated (diff)
Actions #2

Updated by Xuehan Xu almost 2 years ago

  • Assignee set to Xuehan Xu
  • Pull request ID set to 46274
Actions #3

Updated by Xuehan Xu almost 2 years ago

  • Status changed from New to Resolved
Actions

Also available in: Atom PDF