crimson/admin: deal with seastar's new metric types/logics

Fixes: https://tracker.ceph.com/issues/55666
Signed-off-by: Xuehan Xu <xxhdx1985126@gmail.com>